--- a/dados_sinteticos/exercico.ipynb
+++ b/dados_sinteticos/exercico.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "4             calçados  46.603759             calçados  46.603759  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "10  164.602973  eletrônicos  200.439657  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
        "24    41.17        72.19   acessórios   acessórios   14.721730  "
       ]
      },
-     "execution_count": 149,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1544,7 @@
        "[100 rows x 26 columns]"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -2060,7 +2060,7 @@
        "111  vermelho  40.93   33.84     1.05        77.76  eletrônicos  851.322723  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2079,7 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -2102,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -2151,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -2176,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -2209,14 +2209,55 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(10)\n",
-    "df.isnull().sum()"
+    "df.isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id             False\n",
+      "data           False\n",
+      "hora           False\n",
+      "cliente        False\n",
+      "produto        False\n",
+      "quantidade     False\n",
+      "total          False\n",
+      "status         False\n",
+      "cidade         False\n",
+      "estado         False\n",
+      "pais           False\n",
+      "cep            False\n",
+      "frete          False\n",
+      "pagamento      False\n",
+      "vendedor       False\n",
+      "marca          False\n",
+      "modelo         False\n",
+      "cor            False\n",
+      "peso           False\n",
+      "altura         False\n",
+      "largura        False\n",
+      "comprimento    False\n",
+      "categoria      False\n",
+      "Valor real     False\n",
+      "dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "coluna_vazia_com_texto = df.isna() | (df == '')\n",
+    "print(coluna_vazia_com_texto.any())\n"
    ]
   }
  ],
