--- a/Atividade mineração de/exercico.ipynb
+++ b/Atividade mineração de/exercico.ipynb
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfSemCliente = df.drop(columns=['cliente'])"
+    "df = df.drop(columns=['cliente'])"
    ]
   },
   {
@@ -255,7 +255,7 @@
    ],
    "source": [
     "\n",
-    "dfSemCliente.stack().unique()"
+    "df.stack().unique()"
    ]
   },
   {
