--- a/Trabalho Arima/Arima.ipynb
+++ b/Trabalho Arima/Arima.ipynb
@@ -581,6 +581,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data                0\n",
+       "Codigo              0\n",
+       "Preco_Abertura      0\n",
+       "Preco_Fechamento    0\n",
+       "Ano                 0\n",
+       "Mes                 0\n",
+       "Dia                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AMAZON_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
