--- a/Trabalho Arima/Arima.ipynb
+++ b/Trabalho Arima/Arima.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
    ],
    "source": [
     "# Filtra os dados da Amazon\n",
-    "ELETROBRAS_df = df_train[df_train['Codigo'].str.endswith('ELET3')].copy()\n",
+    "ELETROBRAS_df = df_train[df_train['Codigo'].str.endswith('02ELET3')].copy()\n",
     "\n",
     "# Converte a coluna 'Data' para o formato de data apropriado\n",
     "ELETROBRAS_df['Data'] = pd.to_datetime(ELETROBRAS_df['Data'], format='%Y%m%d')\n",
@@ -78,7 +78,269 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Codigo</th>\n",
+       "      <th>Preco_Abertura</th>\n",
+       "      <th>Preco_Fechamento</th>\n",
+       "      <th>Ano</th>\n",
+       "      <th>Mes</th>\n",
+       "      <th>Dia</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Data</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-01-03</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3344.0</td>\n",
+       "      <td>3248.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-19</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3193.0</td>\n",
+       "      <td>3190.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-21</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3477.0</td>\n",
+       "      <td>3380.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-04</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3404.0</td>\n",
+       "      <td>3341.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-04</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3262.0</td>\n",
+       "      <td>3160.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-22</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3391.0</td>\n",
+       "      <td>3366.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-20</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3306.0</td>\n",
+       "      <td>3290.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-07</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3370.0</td>\n",
+       "      <td>3307.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-05</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3179.0</td>\n",
+       "      <td>3133.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-23</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3470.0</td>\n",
+       "      <td>3452.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-21</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3357.0</td>\n",
+       "      <td>3325.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-08</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3330.0</td>\n",
+       "      <td>3287.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-06</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3197.0</td>\n",
+       "      <td>3154.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-24</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3400.0</td>\n",
+       "      <td>3315.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-24</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3401.0</td>\n",
+       "      <td>3289.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-09</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3325.0</td>\n",
+       "      <td>3229.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-07</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3150.0</td>\n",
+       "      <td>3029.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-25</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3301.0</td>\n",
+       "      <td>3298.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-25</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3386.0</td>\n",
+       "      <td>3381.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-10</th>\n",
+       "      <td>02ELET3</td>\n",
+       "      <td>3400.0</td>\n",
+       "      <td>3361.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Codigo  Preco_Abertura  Preco_Fechamento   Ano  Mes  Dia\n",
+       "Data                                                                 \n",
+       "2022-01-03  02ELET3          3344.0            3248.0  2022    1    3\n",
+       "2022-01-19  02ELET3          3193.0            3190.0  2022    1   19\n",
+       "2022-02-21  02ELET3          3477.0            3380.0  2022    2   21\n",
+       "2022-02-04  02ELET3          3404.0            3341.0  2022    2    4\n",
+       "2022-01-04  02ELET3          3262.0            3160.0  2022    1    4\n",
+       "2022-02-22  02ELET3          3391.0            3366.0  2022    2   22\n",
+       "2022-01-20  02ELET3          3306.0            3290.0  2022    1   20\n",
+       "2022-02-07  02ELET3          3370.0            3307.0  2022    2    7\n",
+       "2022-01-05  02ELET3          3179.0            3133.0  2022    1    5\n",
+       "2022-02-23  02ELET3          3470.0            3452.0  2022    2   23\n",
+       "2022-01-21  02ELET3          3357.0            3325.0  2022    1   21\n",
+       "2022-02-08  02ELET3          3330.0            3287.0  2022    2    8\n",
+       "2022-01-06  02ELET3          3197.0            3154.0  2022    1    6\n",
+       "2022-01-24  02ELET3          3400.0            3315.0  2022    1   24\n",
+       "2022-02-24  02ELET3          3401.0            3289.0  2022    2   24\n",
+       "2022-02-09  02ELET3          3325.0            3229.0  2022    2    9\n",
+       "2022-01-07  02ELET3          3150.0            3029.0  2022    1    7\n",
+       "2022-01-25  02ELET3          3301.0            3298.0  2022    1   25\n",
+       "2022-02-25  02ELET3          3386.0            3381.0  2022    2   25\n",
+       "2022-02-10  02ELET3          3400.0            3361.0  2022    2   10"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ELETROBRAS_df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +502,7 @@
       "\u001b[1;31mKeyError\u001b[0m: 'Data'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m6\u001b[39m))\n\u001b[0;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(ELETROBRAS_df\u001b[38;5;241m.\u001b[39mindex, ELETROBRAS_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSuavizacao\u001b[39m\u001b[38;5;124m'\u001b[39m], label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPreço de Fechamento Suavizado (Histórico)\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(\u001b[43mELETROBRAS_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mData\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m[:horizonte], previsoes, marker\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mo\u001b[39m\u001b[38;5;124m'\u001b[39m, linestyle\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m--\u001b[39m\u001b[38;5;124m'\u001b[39m, color\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mred\u001b[39m\u001b[38;5;124m'\u001b[39m, label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPrevisões ARIMA\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPrevisões ARIMA para o Preço de Fechamento Suavizado da Amazon\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mData\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[25], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m6\u001b[39m))\n\u001b[0;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(ELETROBRAS_df\u001b[38;5;241m.\u001b[39mindex, ELETROBRAS_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSuavizacao\u001b[39m\u001b[38;5;124m'\u001b[39m], label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPreço de Fechamento Suavizado (Histórico)\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(\u001b[43mELETROBRAS_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mData\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m[:horizonte], previsoes, marker\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mo\u001b[39m\u001b[38;5;124m'\u001b[39m, linestyle\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m--\u001b[39m\u001b[38;5;124m'\u001b[39m, color\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mred\u001b[39m\u001b[38;5;124m'\u001b[39m, label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPrevisões ARIMA\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPrevisões ARIMA para o Preço de Fechamento Suavizado da Amazon\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mData\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
       "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\pandas\\core\\frame.py:4090\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4088\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4089\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4090\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4091\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4092\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
       "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
       "\u001b[1;31mKeyError\u001b[0m: 'Data'"
