sauvização da base

--- a/Trabalho Arima/Arima.ipynb
+++ b/Trabalho Arima/Arima.ipynb
@@ -135,6 +135,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'AMAZON_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[225], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Exemplo de suavização exponencial simples\u001b[39;00m\n\u001b[0;32m      2\u001b[0m alpha \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.1\u001b[39m  \u001b[38;5;66;03m# Fator de suavização\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m model_exp \u001b[38;5;241m=\u001b[39m SimpleExpSmoothing(\u001b[43mAMAZON_df\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPreco_Fechamento\u001b[39m\u001b[38;5;124m'\u001b[39m])\u001b[38;5;241m.\u001b[39mfit(smoothing_level\u001b[38;5;241m=\u001b[39malpha)\n\u001b[0;32m      4\u001b[0m AMAZON_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSuavizacao_EXP\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m model_exp\u001b[38;5;241m.\u001b[39mfittedvalues\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Plotando a suavização exponencial simples\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'AMAZON_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Exemplo de suavização exponencial simples\n",
+    "alpha = 0.1  # Fator de suavização\n",
+    "model_exp = SimpleExpSmoothing(AMAZON_df['Preco_Fechamento']).fit(smoothing_level=alpha)\n",
+    "AMAZON_df['Suavizacao_EXP'] = model_exp.fittedvalues\n",
+    "\n",
+    "# Plotando a suavização exponencial simples\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(AMAZON_df.index, AMAZON_df['Preco_Fechamento'], label='Original')\n",
+    "plt.plot(AMAZON_df.index, AMAZON_df['Suavizacao_EXP'], label='Suavização Exponencial')\n",
+    "plt.title('Suavização Exponencial Simples')\n",
+    "plt.xlabel('Data')\n",
+    "plt.ylabel('Preço de Fechamento')\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [
